--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^5.16.6",
     "@mui/material": "^5.15.15",
+    "@react-email/components": "^0.0.22",
     "@tabler/icons-react": "^3.11.0",
+    "axios": "^1.7.3",
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.21",
     "next": "14.2.5",
@@ -21,6 +23,7 @@
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "resend": "^3.5.0",
     "tailwind-merge": "^2.4.0"
   },
   "devDependencies": {
