--- a/package.json
+++ b/package.json
@@ -13,18 +13,22 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^5.16.6",
     "@mui/material": "^5.15.15",
+    "@radix-ui/react-slot": "^1.1.0",
     "@react-email/components": "^0.0.22",
     "@tabler/icons-react": "^3.11.0",
     "axios": "^1.7.3",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.21",
+    "lucide-react": "^0.456.0",
     "next": "14.2.5",
     "next-images": "^1.8.5",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
     "resend": "^3.5.0",
-    "tailwind-merge": "^2.4.0"
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
